--- a/index.html
+++ b/index.html
@@ -3,67 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Edoardo Sebastiano De Duro's personal website">
-    <title>Your Name | Personal Website</title>
+    <title>[Your Name, PhD] - Academic Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f4;
         }
         header {
-            background-color: #333;
-            color: #f4f4f9;
-            padding: 20px;
+            background-color: #2c3e50;
+            color: white;
             text-align: center;
+            padding: 1rem;
         }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
+        nav {
+            background-color: #34495e;
+            color: white;
+            padding: 1rem;
         }
-        .content {
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-            text-align: center;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            line-height: 1.6;
-        }
-        .social-links a {
-            margin: 0 10px;
+        nav a {
+            color: white;
             text-decoration: none;
-            color: #333;
-            font-size: 1.2em;
+            margin-right: 15px;
         }
-        .social-links a:hover {
-            color: #0073e6;
+        section {
+            background-color: white;
+            margin: 20px 0;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .publication {
+            border-bottom: 1px solid #eee;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>[Your Full Name, PhD]</h1>
+        <p>[Your Academic Position and Department]</p>
+    </header>
 
-<header>
-    <h1>Your Name</h1>
-    <p>PhD Candidate in Cognitive Science | Department of Psychology and Cognitive Science</p>
-</header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#research">Research</a>
+        <a href="#publications">Publications</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-<div class="content">
-    <h2>About Me</h2>
-    <p>Hi, I'm Edoardo Sebastiano De Duro, a PhD candidate in Cognitive Science. I’m passionate about exploring mental health in academia, focusing on various psychological aspects, including disorders. Currently, I'm working with PhDGPT, a project combining text analysis and questionnaire responses to understand the mental health experiences of PhD students.</p>
-    
-    <h2>Connect with Me</h2>
-    <div class="social-links">
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/username" target="_blank">GitHub</a> |
-        <a href="mailto:yourname@email.com">Email</a>
-    </div>
-</div>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            Brief professional bio highlighting your academic background, 
+            research interests, and professional achievements. 
+            Include your academic credentials and specialized expertise.
+        </p>
+    </section>
 
+    <section id="research">
+        <h2>Research Interests</h2>
+        <ul>
+            <li>Research Area 1</li>
+            <li>Research Area 2</li>
+            <li>Research Area 3</li>
+        </ul>
+
+        <h3>Current Projects</h3>
+        <div>
+            <h4>Project Title 1</h4>
+            <p>Description of current research project, methodologies, and potential impacts.</p>
+        </div>
+        <div>
+            <h4>Project Title 2</h4>
+            <p>Description of current research project, methodologies, and potential impacts.</p>
+        </div>
+    </section>
+
+    <section id="publications">
+        <h2>Publications</h2>
+        <div class="publication">
+            <h4>Article Title 1</h4>
+            <p>Authors, Journal Name, Year, DOI</p>
+        </div>
+        <div class="publication">
+            <h4>Article Title 2</h4>
+            <p>Authors, Journal Name, Year, DOI</p>
+        </div>
+        <div class="publication">
+            <h4>Conference Proceeding</h4>
+            <p>Conference Name, Location, Year</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Information</h2>
+        <p>Email: [your.email@university.edu]</p>
+        <p>Department: [Your Department]</p>
+        <p>University: [Your University Name]</p>
+        <p>ORCID: [Your ORCID ID]</p>
+    </section>
+
+    <footer style="text-align: center; padding: 20px; background-color: #2c3e50; color: white;">
+        © [Year] [Your Name]. All Rights Reserved.
+    </footer>
 </body>
 </html>
