--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </head>
 <body>
     <header>
-        <h1>[Your Full Name, PhD]</h1>
-        <p>[Your Academic Position and Department]</p>
+        <h1>Edoardo Sebastiano De Duro, PhD candidate</h1>
+        <p>Department of Psychology and Cognitive Science, University of Trento, Italy</p>
     </header>
 
     <nav>
@@ -58,9 +58,9 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            Brief professional bio highlighting your academic background, 
-            research interests, and professional achievements. 
-            Include your academic credentials and specialized expertise.
+            I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
+            My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand human mind.
+            I work at
         </p>
     </section>
 
