--- a/index.html
+++ b/index.html
@@ -3,112 +3,237 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Edoardo Sebastiano De Duro, PhD candidate]</title>
+    <title>Edoardo Sebastiano De Duro | PhD Candidate</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f4f4f4;
+        :root {
+            --primary-color: #2c3e50;
+            --secondary-color: #3498db;
+            --background-color: #f8f9fa;
+            --text-color: #2c3e50;
+            --section-background: #ffffff;
         }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.8;
+            color: var(--text-color);
+            background-color: var(--background-color);
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
         header {
-            background-color: #2c3e50;
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            padding: 3rem 0;
+            margin-bottom: 2rem;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        header p {
+            text-align: center;
+            font-size: 1.2rem;
+            opacity: 0.9;
+        }
+
+        nav {
+            background-color: var(--section-background);
+            padding: 1rem 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        nav .container {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        nav a {
+            color: var(--primary-color);
+            text-decoration: none;
+            font-weight: 600;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+        }
+
+        nav a:hover {
+            background-color: var(--secondary-color);
+            color: white;
+        }
+
+        section {
+            background-color: var(--section-background);
+            margin: 2rem auto;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+
+        h2 {
+            color: var(--primary-color);
+            margin-bottom: 1.5rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 3px solid var(--secondary-color);
+        }
+
+        .publication {
+            padding: 1.5rem;
+            margin: 1rem 0;
+            border-radius: 8px;
+            background-color: #f8f9fa;
+            border-left: 4px solid var(--secondary-color);
+        }
+
+        .publication h4 {
+            color: var(--primary-color);
+            margin-bottom: 0.5rem;
+        }
+
+        .contact-info {
+            display: grid;
+            gap: 1rem;
+        }
+
+        .contact-item {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .contact-item i {
+            color: var(--secondary-color);
+            font-size: 1.2rem;
+        }
+
+        footer {
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
             text-align: center;
-            padding: 1rem;
+            padding: 2rem 0;
+            margin-top: 3rem;
         }
-        nav {
-            background-color: #34495e;
-            color: white;
-            padding: 1rem;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin-right: 15px;
-        }
-        section {
-            background-color: white;
-            margin: 20px 0;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .publication {
-            border-bottom: 1px solid #eee;
-            padding: 10px 0;
+
+        @media (max-width: 768px) {
+            nav .container {
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            header h1 {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Edoardo Sebastiano De Duro, PhD candidate</h1>
-        <p>Department of Psychology and Cognitive Science, University of Trento, Italy</p>
+        <div class="container">
+            <h1>Edoardo Sebastiano De Duro</h1>
+            <p>PhD Candidate | Department of Psychology and Cognitive Science, University of Trento, Italy</p>
+        </div>
     </header>
 
     <nav>
-        <a href="#about">About</a>
-        <a href="#research">Research</a>
-        <a href="#publications">Publications</a>
-        <a href="#contact">Contact</a>
+        <div class="container">
+            <a href="#about">About</a>
+            <a href="#research">Research</a>
+            <a href="#publications">Publications</a>
+            <a href="#contact">Contact</a>
+        </div>
     </nav>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
-            My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand human mind.
-            I work at
-        </p>
-    </section>
+    <main class="container">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
+                My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand human mind.
+            </p>
+        </section>
 
-    <section id="research">
-        <h2>Research Interests</h2>
-        <ul>
-            <li>Research Area 1</li>
-            <li>Research Area 2</li>
-            <li>Research Area 3</li>
-        </ul>
+        <section id="research">
+            <h2>Research Interests</h2>
+            <ul>
+                <li>Research Area 1</li>
+                <li>Research Area 2</li>
+                <li>Research Area 3</li>
+            </ul>
+            <h3>Current Projects</h3>
+            <div class="publication">
+                <h4>Project Title 1</h4>
+                <p>Description of current research project, methodologies, and potential impacts.</p>
+            </div>
+            <div class="publication">
+                <h4>Project Title 2</h4>
+                <p>Description of current research project, methodologies, and potential impacts.</p>
+            </div>
+        </section>
 
-        <h3>Current Projects</h3>
-        <div>
-            <h4>Project Title 1</h4>
-            <p>Description of current research project, methodologies, and potential impacts.</p>
-        </div>
-        <div>
-            <h4>Project Title 2</h4>
-            <p>Description of current research project, methodologies, and potential impacts.</p>
-        </div>
-    </section>
+        <section id="publications">
+            <h2>Publications</h2>
+            <div class="publication">
+                <h4>Article Title 1</h4>
+                <p>Authors, Journal Name, Year, DOI</p>
+            </div>
+            <div class="publication">
+                <h4>Article Title 2</h4>
+                <p>Authors, Journal Name, Year, DOI</p>
+            </div>
+            <div class="publication">
+                <h4>Conference Proceeding</h4>
+                <p>Conference Name, Location, Year</p>
+            </div>
+        </section>
 
-    <section id="publications">
-        <h2>Publications</h2>
-        <div class="publication">
-            <h4>Article Title 1</h4>
-            <p>Authors, Journal Name, Year, DOI</p>
-        </div>
-        <div class="publication">
-            <h4>Article Title 2</h4>
-            <p>Authors, Journal Name, Year, DOI</p>
-        </div>
-        <div class="publication">
-            <h4>Conference Proceeding</h4>
-            <p>Conference Name, Location, Year</p>
-        </div>
-    </section>
+        <section id="contact">
+            <h2>Contact Information</h2>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <p>Email: your.email@university.edu</p>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-university"></i>
+                    <p>Department: Department of Psychology and Cognitive Science</p>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-location-dot"></i>
+                    <p>University: University of Trento</p>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-orcid"></i>
+                    <p>ORCID: [Your ORCID ID]</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <section id="contact">
-        <h2>Contact Information</h2>
-        <p>Email: [your.email@university.edu]</p>
-        <p>Department: [Your Department]</p>
-        <p>University: [Your University Name]</p>
-        <p>ORCID: [Your ORCID ID]</p>
-    </section>
-
-    <footer style="text-align: center; padding: 20px; background-color: #2c3e50; color: white;">
-        © [Year] [Your Name]. All Rights Reserved.
+    <footer>
+        <div class="container">
+            <p>© 2024 Edoardo Sebastiano De Duro. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
