--- a/index.html
+++ b/index.html
@@ -42,16 +42,43 @@
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
-        header h1 {
+        .profile-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .profile-image {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid white;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .profile-image:hover {
+            transform: scale(1.05);
+        }
+
+        .profile-info {
+            text-align: left;
+        }
+
+        .profile-info h1 {
             font-size: 2.5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .profile-traditional {
             text-align: center;
         }
 
-        header p {
-            text-align: center;
-            font-size: 1.2rem;
-            opacity: 0.9;
+        .profile-traditional .profile-image {
+            margin-bottom: 1.5rem;
         }
 
         nav {
@@ -141,19 +168,47 @@
                 gap: 1rem;
             }
 
-            header h1 {
-                font-size: 2rem;
+            .profile-container {
+                flex-direction: column;
+                text-align: center;
+            }
+            
+            .profile-info {
+                text-align: center;
             }
         }
     </style>
 </head>
 <body>
+    <!-- Option 1: Side-by-side layout -->
     <header>
         <div class="container">
-            <h1>Edoardo Sebastiano De Duro</h1>
-            <p>PhD Candidate | Department of Psychology and Cognitive Science, University of Trento, Italy</p>
+            <div class="profile-container">
+                <img src="your-profile-picture.jpg" alt="Edoardo Sebastiano De Duro" class="profile-image">
+                <div class="profile-info">
+                    <h1>Edoardo Sebastiano De Duro</h1>
+                    <p>PhD Candidate</p>
+                    <p>Department of Psychology and Cognitive Science</p>
+                    <p>University of Trento, Italy</p>
+                </div>
+            </div>
         </div>
     </header>
+
+    <!-- Option 2: Traditional centered layout -->
+    <!-- Uncomment this and comment out Option 1 if you prefer this style
+    <header>
+        <div class="container">
+            <div class="profile-traditional">
+                <img src="your-profile-picture.jpg" alt="Edoardo Sebastiano De Duro" class="profile-image">
+                <h1>Edoardo Sebastiano De Duro</h1>
+                <p>PhD Candidate</p>
+                <p>Department of Psychology and Cognitive Science</p>
+                <p>University of Trento, Italy</p>
+            </div>
+        </div>
+    </header>
+    -->
 
     <nav>
         <div class="container">
