--- a/index.html
+++ b/index.html
@@ -231,29 +231,19 @@
         <section id="research">
             <h2>Research Interests</h2>
             <ul>
-                <li>Research Area 1</li>
-                <li>Research Area 2</li>
-                <li>Research Area 3</li>
+                <li>Large Language Models</li>
+                <li>Machine Psychology</li>
+                <li>Mental Health</li>
             </ul>
-            <h3>Current Projects</h3>
-            <div class="publication">
-                <h4>Project Title 1</h4>
-                <p>Description of current research project, methodologies, and potential impacts.</p>
-            </div>
-            <div class="publication">
-                <h4>Project Title 2</h4>
-                <p>Description of current research project, methodologies, and potential impacts.</p>
-            </div>
-        </section>
 
         <section id="publications">
             <h2>Publications</h2>
             <div class="publication">
-                <h4>Article Title 1</h4>
-                <p>Authors, Journal Name, Year, DOI</p>
+                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank">Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
+                <p>L. Ciringione, E.S. De Duro, M. Stella - Ithaca: Viaggio nella Scienza 2024 (23), 63-72</p>
             </div>
             <div class="publication">
-                <h4>Article Title 2</h4>
+                <h4>EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</h4>
                 <p>Authors, Journal Name, Year, DOI</p>
             </div>
             <div class="publication">
@@ -267,7 +257,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p>Email: your.email@university.edu</p>
+                    <p>Email: edoardo.deduro@unitn.it</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-university"></i>
@@ -277,17 +267,13 @@
                     <i class="fas fa-location-dot"></i>
                     <p>University: University of Trento</p>
                 </div>
-                <div class="contact-item">
-                    <i class="fab fa-orcid"></i>
-                    <p>ORCID: [Your ORCID ID]</p>
-                </div>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>© 2024 Edoardo Sebastiano De Duro. All rights reserved.</p>
+            <p></p>
         </div>
     </footer>
 </body>
