--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
         <section id="publications">
             <h2>Publications</h2>
             <div class="publication">
-                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank">Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
+                <h4><a href="">EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
+                <p></p>
+            </div>
+            <div class="publication">
+                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank">Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</h4>
                 <p>L. Ciringione, E.S. De Duro, M. Stella - Ithaca: Viaggio nella Scienza 2024 (23), 63-72</p>
             </div>
             <div class="publication">
-                <h4>EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</h4>
-                <p>Authors, Journal Name, Year, DOI</p>
-            </div>
-            <div class="publication">
-                <h4>Conference Proceeding</h4>
+                <h4></h4>
                 <p>Conference Name, Location, Year</p>
             </div>
         </section>
