--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <section id="publications">
             <h2>Publications</h2>
             <div class="publication">
-                <h4><a href="">EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
+                <h4>EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</h4>
                 <p></p>
             </div>
             <div class="publication">
