--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <header>
         <div class="container">
             <div class="profile-traditional">
-                <img src="your-profile-picture.jpg" alt="Edoardo Sebastiano De Duro" class="profile-image">
+                <img src="IMG-20230804-WA000.jpg" alt="Edoardo Sebastiano De Duro" class="profile-image">
                 <h1>Edoardo Sebastiano De Duro</h1>
                 <p>PhD Candidate</p>
                 <p>Department of Psychology and Cognitive Science</p>
