--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <header>
         <div class="container">
             <div class="profile-container">
-                <img src="IMG-20230804-WA000.jpg" alt="Edoardo Sebastiano De Duro" class="profile-image">
+                <img src="----" alt="Edoardo Sebastiano De Duro" class="profile-image">
                 <div class="profile-info">
                     <h1>Edoardo Sebastiano De Duro</h1>
                     <p>PhD Candidate</p>
