--- a/index.html
+++ b/index.html
@@ -230,24 +230,24 @@
 
         <section id="research">
             <h2>Research Interests</h2>
-            <ul>
-                <li>    Large Language Models 🧠💬</li>
-                <li>    Machine Psychology 🤖🧠</li>
-                <li>    Mental Health 🧠🌱</li>
+            <ul style="padding-left: 20px;">
+                <li>Large Language Models 🧠💬</li>
+                <li>Machine Psychology 🤖🧠</li>
+                <li>Mental Health 🧠🌱</li>
             </ul>
 
         <section id="publications">
             <h2>Publications</h2>
             <div class="publication">
-                <h4><a href="https://osf.io/mnvy3/download" target="_blank">>EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
-                <p></p>
+                <h4><a href="https://osf.io/mnvy3/download" target="_blank">EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
+                <p>A. Semeraro, S. Vilella, R. Improta, E.S. De Duro, S.M. Mohammad, G. Ruffo, M. Stella</p>
             </div>
             <div class="publication">
                 <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank">Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
                 <p>L. Ciringione, E.S. De Duro, M. Stella - Ithaca: Viaggio nella Scienza 2024 (23), 63-72</p>
             </div>
             <div class="publication">
-                <h4><a href="https://files.osf.io/v1/resources/vhmqs/providers/osfstorage/664f365b77ff4c13e3e043d7?action=download&direct&version=1">Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
+                <h4><a href="https://files.osf.io/v1/resources/vhmqs/providers/osfstorage/664f365b77ff4c13e3e043d7?action=download&direct&version=1" target="_blank">Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
                 <p>E.S. De Duro, R. Improta, M. Stella</p>
             </div>
         </section>
