--- a/index.html
+++ b/index.html
@@ -272,9 +272,10 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p></p>
+    <div class="container">
+        <div class="linkedin-item">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/edoardo-de-duro-577180270/" target="_blank">LinkedIn</a>
         </div>
-    </footer>
-</body>
-</html>
+    </div>
+</footer>
