--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <div class="container">
         <div class="linkedin-item">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/edoardo-de-duro-577180270/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/edoardo-de-duro-577180270/" target="_blank">LinkedIn Page</a>
         </div>
     </div>
 </footer>
