--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                     <p>PhD Candidate</p>
                     <p>Department of Psychology and Cognitive Science</p>
                     <p>University of Trento, Italy</p>
+                    <p><a href="https://cognoscolab.altervista.org/">CogNosco Lab</a></p>
                 </div>
             </div>
         </div>
@@ -225,6 +226,7 @@
             <p>
                 I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
                 My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand human mind.
+                I work at <a href="http://cognosco.compscicons.net/ target="_blank"">CogNosco Lab (P.I. Massimo Stella) where we do lots of interesting things!</a>
             </p>
         </section>
 
@@ -271,11 +273,10 @@
         </section>
     </main>
 
-    <footer>
-    <div class="container">
-        <div class="linkedin-item">
-            <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/edoardo-de-duro-577180270/" target="_blank">LinkedIn Page</a>
+   <footer>
+        <div class="container">
+            <p></p>
         </div>
-    </div>
-</footer>
+    </footer>
+</body>
+</html>
