--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <p>
                 I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
                 My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand human mind.
-                I work at <a href="http://cognosco.compscicons.net/ target="_blank"">CogNosco Lab (P.I. Massimo Stella) where we do lots of interesting things!</a>
+                I work at <a href="http://cognosco.compscicons.net/ target="_blank"">CogNosco Lab (PI Massimo Stella) where we do lots of interesting things!</a>
             </p>
         </section>
 
