--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@
             <h2>About Me</h2>
             <p>
                 I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
-                My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand human mind.
-                I work at <a href="http://cognosco.compscicons.net/ target="_blank"">CogNosco Lab (PI Massimo Stella) where we do lots of interesting things!</a>
+                My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand the human mind.</p>
+                <p>I work at <a href="http://cognosco.compscicons.net/ target="_blank"">CogNosco Lab</a> (PI Massimo Stella) where we do lots of interesting things!
             </p>
         </section>
 
         <section id="research">
             <h2>Research Interests</h2>
-            <ul style="padding-left: 20px;">
+            <ul style="padding-left: 30px;">
                 <li>Large Language Models 🧠💬</li>
                 <li>Machine Psychology 🤖🧠</li>
                 <li>Mental Health 🧠🌱</li>
