--- a/index.html
+++ b/index.html
@@ -263,11 +263,15 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-university"></i>
-                    <p>Department: Department of Psychology and Cognitive Science</p>
+                    <p>Department of Psychology and Cognitive Science</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-location-dot"></i>
-                    <p>University: University of Trento</p>
+                    <p>University of Trento</p>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-linkedin"></i>
+                    <p><a href="https://www.linkedin.com/in/edoardo-de-duro-577180270/" target="_blank">LinkedIn</p>
                 </div>
             </div>
         </section>
