--- a/index.html
+++ b/index.html
@@ -245,12 +245,16 @@
                 <p>A. Semeraro, S. Vilella, R. Improta, E.S. De Duro, S.M. Mohammad, G. Ruffo, M. Stella</p>
             </div>
             <div class="publication">
-                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank">Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
-                <p>L. Ciringione, E.S. De Duro, M. Stella - Ithaca: Viaggio nella Scienza 2024 (23), 63-72</p>
-            </div>
-            <div class="publication">
                 <h4><a href="https://files.osf.io/v1/resources/vhmqs/providers/osfstorage/664f365b77ff4c13e3e043d7?action=download&direct&version=1" target="_blank">Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
                 <p>E.S. De Duro, R. Improta, M. Stella</p>
+            </div>
+            <div class="publication">
+                <h4><a href="https://arxiv.org/abs/2411.10473" target="_blank">PhDGPT: Introducing a psychometric and linguistic dataset about how large language models perceive graduate students and professors in psychology</a></h4>
+                <p>E.S. De Duro, E. Taietta, R. Improta, M. Stella</p>
+            </div>
+            <div class="publication">
+                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank">Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
+                <p>L. Ciringione, E.S. De Duro, M. Stella - Ithaca: Viaggio nella Scienza 2024 (23), 63-72</p>
             </div>
         </section>
 
