--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p>Email: edoardo.deduro@unitn.it</p>
+                    <p>edoardo.deduro@unitn.it</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-university"></i>
