--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <section id="publications">
             <h2>Publications</h2>
             <div class="publication">
-                <h4><a href="https://files.osf.io/v1/resources/vhmqs/providers/osfstorage/664f365b77ff4c13e3e043d7?action=download&direct&version=1" target="_blank"> Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
+                <h4><a href="https://osf.io/preprints/psyarxiv/vhmqs" target="_blank"> Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
                 <p>E.S. De Duro, R. Improta, M. Stella</p>
             </div>
             <div class="publication">
