--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <p>PhD Candidate</p>
                     <p>Department of Psychology and Cognitive Science</p>
                     <p>University of Trento, Italy</p>
-                    <p><a href="https://cognoscolab.altervista.org/">CogNosco Lab</a></p>
+                    <p><a href="https://cognosco.dipsco.unitn.it/">CogNosco Lab</a></p>
                 </div>
             </div>
         </div>
