--- a/index.html
+++ b/index.html
@@ -253,7 +253,14 @@
                 <p>A. Semeraro, S. Vilella, R. Improta, E. S. De Duro, S. M. Mohammad, G. Ruffo, M. Stella</p>
             </div>
             <div class="publication">
-                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank"> Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
+                <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank"> Network science highlights the emotional structure of counselling
+conversations simulated by Large Language Models and humans</a></h4>
+                <p>E. S. De Duro, R. Improta, M. Stella - Proceedings of the 28th Workshop on the Semantics and Pragmatics of Dialogue, September, 11–12, 2024,
+Trento, Italy.
+</p>
+            </div>
+            <div class="publication">
+                <h4><a href="https://www.semdial.org/anthology/Z24-DeDuro_semdial_0034.pdf" target="_blank"> Sfidare l'ansia da matematica con l'aiuto delle scienze cognitive</a></h4>
                 <p>L. Ciringione, E. S. De Duro, M. Stella - Ithaca: Viaggio nella Scienza 2024 (23), 63-72</p>
             </div>
         </section>
