--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
                 <p>E. S. De Duro, E. Taietta, R. Improta, M. Stella</p>
             </div>
             <div class="publication">
+                <h4><a href="https://www.researchgate.net/publication/385335979_Client101_Leveraging_Large_Language_Models_for_Simulated_Psychotherapy_Client_Interactions_Preprint" target="_blank">Client101: Leveraging Large Language Models for Simulated Psychotherapy Client Interactions (Preprint)</a></h4>
+                <p>D. C. Lozoya, M. Cnway, E. S. De Duro, S. D'Alfonso</p>
+            </div>
+            <div class="publication">
                 <h4><a href="https://osf.io/mnvy3/download" target="_blank"> EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
                 <p>A. Semeraro, S. Vilella, R. Improta, E. S. De Duro, S. M. Mohammad, G. Ruffo, M. Stella</p>
             </div>
