--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@ Trento, Italy.</p>
                 <p>E. S. De Duro, E. Taietta, R. Improta, M. Stella</p>
             </div>
             <div class="publication">
-                <h4><a href="https://osf.io/mnvy3/download" target="_blank"> EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
-                <p>A. Semeraro, S. Vilella, R. Improta, E. S. De Duro, S. M. Mohammad, G. Ruffo, M. Stella</p>
+                <h4><a href="https://doi.org/10.3758/s13428-024-02553-7" target="_blank"> EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
+                <p>A. Semeraro, S. Vilella, R. Improta, E. S. De Duro, S. M. Mohammad, G. Ruffo, M. Stella - Behav Res 57, 77 (2025)</p>
             </div>
             </div>
             <div class="publication">
