--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Trento, Italy.</p>
             </div>
             <div class="publication">
                 <h4><a href="https://doi.org/10.3758/s13428-024-02553-7" target="_blank"> EmoAtlas: An emotional network analyser of texts merging psychological lexicons, artificial intelligence and network science</a></h4>
-                <p>A. Semeraro, S. Vilella, R. Improta, E. S. De Duro, S. M. Mohammad, G. Ruffo, M. Stella - Behav Res 57, 77 (2025)</p>
+                <p>A. Semeraro, S. Vilella, R. Improta, E. S. De Duro, S. M. Mohammad, G. Ruffo, M. Stella - Behavior Research Methods 57, 77 (2025)</p>
             </div>
             </div>
             <div class="publication">
