--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <p>
                 I'm a PhD candidate in Cognitive Science at the University of Trento. The topic of my PhD will cover AI and mental health.
                 My interests are Mental Health, Natural Language Processing and AI. I truly believe that approaching AI from a cognitive perspective might not only improve AI applications but also result in a tool to better understand the human mind.</p>
-                <p>I work at <a href="http://cognosco.compscicons.net/ target="_blank"">CogNosco Lab</a> (PI Massimo Stella) where we do lots of interesting things!
+                <p>I work at <a href="https://cognosco.dipsco.unitn.it// target="_blank"">CogNosco Lab</a> (PI Massimo Stella) where we do lots of interesting things!
             </p>
         </section>
 
@@ -251,8 +251,8 @@ Trento, Italy.</p>
                 <p>D. C. Lozoya, M. Conway, E. S. De Duro, S. D'Alfonso</p>
             </div>
             <div class="publication">
-                <h4><a href="https://osf.io/preprints/psyarxiv/vhmqs" target="_blank"> Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
-                <p>E. S. De Duro, R. Improta, M. Stella </p>
+                <h4><a href="https://www.sciencedirect.com/science/article/pii/S2667118225000017" target="_blank"> Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
+                <p>E. S. De Duro, R. Improta, M. Stella - Emerging Trends in Drugs, Addictions, and Health, 100170</p>
             </div>
             <div class="publication">
                 <h4><a href="https://arxiv.org/abs/2411.10473" target="_blank"> PhDGPT: Introducing a psychometric and linguistic dataset about how large language models perceive graduate students and professors in psychology</a></h4>
