--- a/index.html
+++ b/index.html
@@ -242,14 +242,19 @@
             <h2>Publications</h2>
                 <div class="publication">
                 <h4><a href="http://siba-ese.unisalento.it/index.php/ithaca/article/view/28646" target="_blank"> Network science highlights the emotional structure of counselling
-conversations simulated by Large Language Models and humans</a></h4>
+                conversations simulated by Large Language Models and humans</a></h4>
                 <p>E. S. De Duro, R. Improta, M. Stella - Proceedings of the 28th Workshop on the Semantics and Pragmatics of Dialogue, September, 11–12, 2024,
-Trento, Italy.</p>
+                Trento, Italy.</p>
                 </div>
-                        <div class="publication">
+                 <div class="publication">
+                <h4><a href="https://arxiv.org/abs/2502.21028" target="_blank">Measuring and identifying factors of individuals' trust in Large Language Models</a></h4>
+                <p>E. S. De Duro, G. Veltri, H. Golino, M. Stella</p>
+                </div>
+            
+                <div class="publication">
                 <h4><a href="https://www.researchgate.net/publication/385335979_Client101_Leveraging_Large_Language_Models_for_Simulated_Psychotherapy_Client_Interactions_Preprint" target="_blank">Client101: Leveraging Large Language Models for Simulated Psychotherapy Client Interactions (Preprint)</a></h4>
                 <p>D. C. Lozoya, M. Conway, E. S. De Duro, S. D'Alfonso</p>
-            </div>
+                </div>
             <div class="publication">
                 <h4><a href="https://www.sciencedirect.com/science/article/pii/S2667118225000017" target="_blank"> Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
                 <p>E. S. De Duro, R. Improta, M. Stella - Emerging Trends in Drugs, Addictions, and Health, 100170</p>
