Change publication link and details for Client101

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
                 </div>
             
                 <div class="publication">
-                <h4><a href="https://www.researchgate.net/publication/385335979_Client101_Leveraging_Large_Language_Models_for_Simulated_Psychotherapy_Client_Interactions_Preprint" target="_blank">Client101: Leveraging Large Language Models for Simulated Psychotherapy Client Interactions (Preprint)</a></h4>
-                <p>D. C. Lozoya, M. Conway, E. S. De Duro, S. D'Alfonso</p>
+                <h4><a href="https://mededu.jmir.org/2025/1/e68056" target="_blank">Client101: Leveraging Large Language Models for Simulated Psychotherapy Client Interactions (Preprint)</a></h4>
+                <p>D. C. Lozoya, M. Conway, E. S. De Duro, S. D'Alfonso - JMIR Med Educ 2025;11:e68056</p>
                 </div>
             <div class="publication">
                 <h4><a href="https://www.sciencedirect.com/science/article/pii/S2667118225000017" target="_blank"> Introducing CounseLLMe: A dataset of simulated mental health dialogues for comparing LLMs like Haiku, LLaMAntino and ChatGPT against humans</a></h4>
