--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+int<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -252,7 +252,7 @@
                 </div>
             
                 <div class="publication">
-                <h4><a href="https://mededu.jmir.org/2025/1/e68056" target="_blank">Client101: Leveraging Large Language Models for Simulated Psychotherapy Client Interactions</a></h4>
+                <h4><a href="https://mededu.jmir.org/2025/1/e68056" target="_blank">Client101: Leveraging Large Language Models for Simulated Psychotherapy Client Interactions (Preprint)</a></h4>
                 <p>D. C. Lozoya, M. Conway, E. S. De Duro, S. D'Alfonso - JMIR Med Educ 2025;11:e68056</p>
                 </div>
             <div class="publication">
