--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ int<!DOCTYPE html>
             <div class="publication">
                 <h4><a href="https://mededu.jmir.org/2025/1/e68056" target="_blank">Cognitive networks identifyt AI biases on societal issues in LArge Language Models</a></h4>
                     
-                <p>E. S. De Duro, E. Franchino, R. Improta G. A. Veltri, M. Stella</p>
+                <p>E. S. De Duro, E. Franchino, R. Improta, G. A. Veltri, M. Stella</p>
                 </div>    
             
             <div class="publication">
